# flight-academy

./: .editorconfig  .gitignore  .gitleaks.toml  .gitleaksignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_OF_ETHICS.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  SECURITY.md  _typos.toml  deny.toml  docker-compose.dev.yml  package.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/rulesets/: protect-tags.json
.github/workflows/: ci.yml  codeql.yml  dco.yml  scorecard.yml  web-ci.yml
apps/api/: Cargo.toml  build.rs  package.json
apps/api/src/: assets.rs  embedded.rs  error.rs  lib.rs  main.rs  middleware.rs
apps/api/src/cli/: error.rs  mod.rs
apps/api/src/handlers/: audit_events.rs  health.rs  home.rs  mod.rs  tenants.rs
apps/api/src/handlers/home/: mod.rs  view.rs
apps/api/styles/: app.css
apps/api/tests/: e2e_tenant_isolation.rs  home.rs  security_headers.rs
apps/web/: package.json  svelte.config.js  vite.config.ts
apps/web-ui/: package.json  tsconfig.json
apps/web-ui/scripts/: emit-tokens-css.ts
apps/web-ui/styles/: base.css
apps/web-ui/tokens/: tokens.css  tokens.json  tokens.schema.json
apps/web/src/: app.css  app.html
apps/web/src/routes/: +layout.ts  +page.svelte
crates/flight-academy-auth/: Cargo.toml
crates/flight-academy-auth/src/: lib.rs  policy.rs  resource.rs  subject.rs
crates/flight-academy-auth/tests/: policy_matrix.rs
crates/flight-academy-aviation/: Cargo.toml
crates/flight-academy-aviation/src/: lib.rs
crates/flight-academy-core/: Cargo.toml
crates/flight-academy-core/src/: error.rs  lib.rs
crates/flight-academy-db/: Cargo.toml  schema.sql
crates/flight-academy-db/migrations/: 20260605000000_init.sql  20260605120000_audit_events_rls.sql  20260605120100_audit_events_statement_triggers.sql  20260606023618_tenants_table.sql  20260620120000_tenant_dek_wrappings.sql
crates/flight-academy-db/src/: audit.rs  dek_wrappings.rs  error.rs  lib.rs  tenants.rs
crates/flight-academy-db/tests/: adr_007_invariants.rs  audit_chain.rs  audit_pool_role_check.rs  rls_smoke.rs  sqlx_key_provider.rs
crates/flight-academy-integrations/: Cargo.toml
crates/flight-academy-integrations/src/: lib.rs
crates/flight-academy-store/: Cargo.toml
crates/flight-academy-store/src/: encrypted.rs  error.rs  key_provider.rs  lib.rs
crates/flight-academy-store/src/aead/: chacha.rs  gcm.rs  gcm_siv.rs  mod.rs
crates/flight-academy-store/tests/: encrypted_wrappers.rs  envelope_roundtrip.rs  key_provider.rs  registry_default_env.rs
crates/flight-academy-test-support/: Cargo.toml
crates/flight-academy-test-support/src/: lib.rs
docs/api/: openapi.json
docs/architecture/: ADR-001-platform.md  ADR-002-release-deployment.md  ADR-003-db-migrations.md  ADR-004-defence-in-depth.md  ADR-005-workspace-layout.md  ADR-006-api-contract.md  ADR-007-sync-filtering-deletion.md  ADR-008-data-sharing-posture.md  ADR-009-event-streams-and-retention.md  ADR-010-platform-operator-access.md  ADR-011-user-consent-grant.md  ADR-012-cross-tenant-dek-erasure.md  ADR-013-auth-keys.md  ADR-014-frontend-architecture.md  ADR-015-csp-static-build.md  ADR-016-compliance-baseline.md  ADR-017-outbound-http-ssrf.md  ADR-018-openapi-emission-format.md  ADR-019-white-label-runtime.md  ADR-020-mash-frontend-architecture.md  ADR-021-cdn-front-door.md  ADR-022-pluggable-aead.md  ADR-023-dek-lifecycle-rotation.md  ADR-template.md  README.md
docs/design/: domain-model.md
docs/operations/: README.md
scripts/: check-adr-refs.sh  check-all.sh  check-code-quality.sh  check-supply-chain.sh  check-workflows.sh  regenerate-schema.sh
