[workspace]
resolver = "3"
members = [
    "crates/flight-academy-core",
    "crates/flight-academy-db",
    "crates/flight-academy-auth",
    "crates/flight-academy-aviation",
    "crates/flight-academy-store",
    "crates/flight-academy-integrations",
    "apps/api",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/flight-academy-uk/flight-academy"
publish = false

[workspace.dependencies]
