[package]
name = "flight-academy-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

# Lib + bin in one crate per ADR-005 §D; binary name follows ADR-002 §C/§E.
[lib]

[[bin]]
name = "flight-academy"
path = "src/main.rs"

# embedded-static gates rust-embed + a static-asset handler for self-host
# (ADR-002 §H, ADR-005 §D). Body empty until apps/web/build/ exists.
[features]
embedded-static = []

[dependencies]
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
flight-academy-core = { version = "0.1.0", path = "../../crates/flight-academy-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["request-id", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
utoipa = { version = "5.5.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
uuid = { version = "1.23.2", features = ["v7"] }
