[package]
name = "flight-academy-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

# Lib + bin in one crate per ADR-005 §D; binary name follows ADR-002 §C/§E.
# `build.rs` at the package root is auto-detected by Cargo; it compiles
# Tailwind v4 CSS for the MASH HTML surface (ADR-020 §O) via Bun +
# @tailwindcss/cli, emitting `static/app.css` for the `/static/*` ServeDir.
[lib]

[[bin]]
name = "flight-academy"
path = "src/main.rs"

# embedded-static gates rust-embed + a static-asset handler for self-host
# (ADR-002 §H, ADR-005 §D, ADR-020 §O). The feature swaps the `ServeDir`
# static service for an in-memory `rust-embed`-backed handler so the
# self-host artefact (`flight-academy-embedded`) ships as a single binary —
# Maud templates already compile into the binary directly; this feature
# wraps the *static* assets (vendored HTMX + Alpine, compiled Tailwind CSS;
# IBM Plex woff2 lands in the typography slice).
[features]
embedded-static = ["dep:rust-embed"]

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
clap = { version = "4.6.1", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["from"] }
flight-academy-auth = { version = "0.1.0", path = "../../crates/flight-academy-auth" }
flight-academy-core = { version = "0.1.0", path = "../../crates/flight-academy-core" }
flight-academy-db = { version = "0.1.0", path = "../../crates/flight-academy-db" }
maud = { version = "0.27.0", features = ["axum"] }
# rust-embed bakes `apps/api/static/` into the binary under
# `--features embedded-static` per ADR-020 §O (self-host single-binary
# distribution variant). `debug-embed` forces compile-time embedding under
# `cargo test` and debug builds — without it rust-embed would re-read the
# source directory at runtime, which defeats the point of the test variant
# (we want the test to exercise the same code path that ships). `mime-guess`
# enables `Metadata::mimetype()` so the embedded handler emits the right
# `Content-Type` without us hand-maintaining an extension → MIME map.
rust-embed = { version = "8.11.0", optional = true, features = ["debug-embed", "mime-guess"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "macros"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["fs", "request-id", "set-header", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
utoipa = { version = "5.5.0", features = ["axum_extras", "uuid"] }
utoipa-axum = "0.2.0"
uuid = { version = "1.23.2", features = ["serde", "v7"] }

[dev-dependencies]
flight-academy-test-support = { version = "0.1.0", path = "../../crates/flight-academy-test-support" }
http-body-util = "0.1.3"
tower = { version = "0.5.3", features = ["util"] }

[build-dependencies]
# Content-hash served assets so URLs like `/static/app-<hash>.css` can carry
# `Cache-Control: max-age=31536000, immutable` per ADR-020 §I. The hash is
# computed from the file body at build time and the hashed path is emitted
# into `OUT_DIR/asset_manifest.rs` for the runtime to `include!()`. SHA-256
# is overkill for URL fingerprinting (a uniform-random 32-bit prefix is
# enough to avoid collisions across the ~10 vendored assets) but it is a
# workspace-known dependency we already pull in via the audit-chain code,
# so reusing it keeps the build-deps minimal.
sha2 = "0.11"
