[package]
name = "flight-academy-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
derive_more = { version = "2.1.1", features = ["from"] }
flight-academy-core = { version = "0.1.0", path = "../flight-academy-core" }
uuid = { version = "1.23.2", features = ["v4"] }
