[package]
name = "flight-academy-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
derive_more = { version = "2.1.1", features = ["from"] }
flight-academy-core = { version = "0.1.0", path = "../flight-academy-core" }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "macros", "migrate"] }
uuid = { version = "1.23.2", features = ["v4"] }

[dev-dependencies]
flight-academy-test-support = { version = "0.1.0", path = "../flight-academy-test-support" }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.23.2", features = ["v4"] }
