[package]
name = "flight-academy-test-support"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
flight-academy-auth = { version = "0.1.0", path = "../flight-academy-auth" }
flight-academy-core = { version = "0.1.0", path = "../flight-academy-core" }
flight-academy-db = { version = "0.1.0", path = "../flight-academy-db" }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "migrate"] }
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
tokio = { version = "1.52.3", features = ["sync", "rt", "macros"] }
uuid = { version = "1.23.2", features = ["v4"] }
